@@ -4,20 +4,22 @@ Hash: SHA256
 DIST hwids-20121119.tar.gz 374451 SHA256 1748240f1243f9d67fe040cd7001fa7984ffd9e7fc8696071b07f1dfe4586697 SHA512 c417ff274980a4d80540aba55ae9a6284136a61a9c0cb63d718a9bed70bb1dfae43817cc93194637654add0203e78ab94c4514e7c2ba5a777ea973cfaed2be91 WHIRLPOOL ec767a6d55f085abce37237a58fa0cd4b5d91233af342368aa7c54685ac4842b23558bf96d4594ead47ed16d4856b37ce123172761e270f0c6cd5550752874c6
 DIST hwids-20121202.tar.gz 378016 SHA256 8f447a6aa0cd8d78fa917decf904069fbaea4084628a0a1307fd68b3be5b6577 SHA512 76c495826f62b74f9bc60e4717cd9c927a09eaab78ac2a947ec6a86aa1d549fcea377cd11e7d3da111216598551e993bb4aeeb1cc59df84dd2da2eccf771e1be WHIRLPOOL de1a5c139626430809bcb55aa60e08be9c70eb2657dab5704a4d7d23a0e48ab989931f15aca5e6afa15a0dda7740a591434bb3b692946ea94f9ed4249ccbdde1
 DIST hwids-20121203.tar.gz 1459083 SHA256 09732da7250db66e876d793ddaac5ecaea2b7614b9fcecf8ac7440c69e1bd2d5 SHA512 d0bc811df46604d81d934c09e30c5a83cfe5455f148f3164ef7fe9866c814626b4405bb6fe054bbbadfd251afdfcd0e7f61dc751ab502f12e12ebd45e9ee5d90 WHIRLPOOL 166d68a9ffd32b39762ea318450c6aeb66a8f19af8935608933e11e8b2cf54d9e477dbcee16942d012fab7a6494e2dfdc20d7eca307943d1ee4a895339e7bbf8
+DIST hwids-20121208.tar.gz 1457689 SHA256 74288296312abaffebb3c9b55f5748e542cb96f0757418eefd170e04b7565e09 SHA512 3ffc64359b3ae64fb206b85f58552343cff168fe1e2620fb134ea076150007bb4c680d47cc34baba34bb02e22c7b95efa1133f6869b5dc68fbe711fbd22ad5e8 WHIRLPOOL 3e8e372a7efd0598ef91e8365e3cc21c9b849bd36b0056e1458da05cce260e82a6faf1d3a8c91394a673f4f1c58bbb77a0e2384c9feed7ae7d0409e472c2abac
 EBUILD hwids-20121119.ebuild 896 SHA256 6a2f8cb4c8b2cb50ab0b5f277748081b3e561365b9db8ee1b74efd7b046b357d SHA512 d94a75f2215bbfd1cdf368ff79796179f8697e3c86758079db5453d43de73853957b89f39089ce345a9f573c74ca46c0d2bc1d53c13ed365be85abde507a9b2c WHIRLPOOL 33d7c0c23ea05b0be71b4c600d78eb5bc4a4695be973bea0dbe1f9cc2a54d81fa7c19e0080c7cedc6b8ee81ae85b82ed24468996a01b0cef4a1ee9d937b767d8
 EBUILD hwids-20121202.ebuild 852 SHA256 2c15b673b9b8a3b8c497ed2a67284745de333729ac50e1263cd22baccc0c79aa SHA512 2927553b1d657a26898c3fdd3fa64652901887bbcdbbd7370f0afdfbbaaab2eceb9eddeb23e8402357e560d867ec86bc64c165a309ba49a8ee6adb3743f842af WHIRLPOOL b79c4d556ca1bf6596ed223d0fe26ed2b098beceda56e8b8a615983446fae7053c23a16d45149a09aaa40211f85afd747b55d2f78373fd95216c8fcc4a47aeb1
 EBUILD hwids-20121203.ebuild 1285 SHA256 415950346816e35d3fcceb91e59c9432a8933cdce270ba7d94ee46601ffbb5e4 SHA512 48b725825dc8481c0573676d7752f79f1aa835ec7c912bc5871ae70cb216e6bebaeb48db2e73617a3770a457df2d5ae54c23a3e5bbff184b28881178d1a63eaf WHIRLPOOL fc4fd9c4ee3631e8758aaa2e9eacdce822a9ee84cca8ae6427127f588275e40847592c953357fb297fc012d8fe7b32f62b11397a9e277e5963793b509d637820
-EBUILD hwids-99999999.ebuild 1323 SHA256 7d38f785629726b4ab17c2793507c6ad31e656c5b5828a68e37f8d28f93ab8d2 SHA512 4d249a9b6a1264a741e431082b58f49ceced8ef98c19953519fbbec153dd985ec8b1aff1281339e0098a2ac8a736533adb22dba52540f09276bb782d7d257d62 WHIRLPOOL d4936c1001d26fc16790310da709cbb24b461ab3aaa51b5dace22aa46296fe72259b031d21538f63bce2d8bc693fe6c95b32a3995bde5f6cdb7950e83b81fe60
-MISC ChangeLog 8085 SHA256 e4d79baffa8f4923eaf3eaa3e90d0e528ad99c608ef330267477a3d12bf8bb3a SHA512 929bbe99d661d66765fce1030f2d1a0c801b2d8d5f1948620c34a360b8a03acaa07f5ab5b40804176be39e175d3e75f20675e429c14d94277023d5bc3be85604 WHIRLPOOL 6ff1b3db5c1445d9011031e3aca3b40e9f93e6cbe46c1f044d268b72e9b89f6161328e12be29afa9bedb9b510cb2582755ae509d86918fdac9f32b9488d6cab2
+EBUILD hwids-20121208.ebuild 1156 SHA256 25a8d75a64020c20c6ff96850dc678dea506e0d25115bb029f254c858337f3a0 SHA512 2fa3a85dfd523fe9988ebef90aaaefa30419eda85389bc60ea86653397663ba04520d4b2eb0c06eab56da500175f7c474bcec2b4c190eacce8783b25e8f86484 WHIRLPOOL b00d69ffe7ce4b551fe991d0e26c9d46820b6709505b336ab24155c102668820c1ffce42ce91869442abd604e6a684eb32c3d89987429294ddfeb43a8aae2ab4
+EBUILD hwids-99999999.ebuild 1058 SHA256 d174f9512090fe6126df38d14fa4a70b7544634d87f801e9805b6f3e33180adb SHA512 a1c7de2de8a0065890a8253c61b91295f521ad0a2231f64423fa7ada033b702a6da020d97b4aae7177643a50ef04345219d656bb92724244b9639af17202c86b WHIRLPOOL 71f86d19ffc2d6010470eaac7cd736d48d57b41fa42dc6539f069e75d673f22a5f67643a7ab148ca360939840619eaf23cd571c175b4e10ed6f61556d37cd872
+MISC ChangeLog 8375 SHA256 5b9ba3ef684b9bf81a12408249673c2dfcaff0c032cb4a86ad8e507847886a50 SHA512 e2f23048483939be7d196d3da1eaa5d17a45448bf0b681dbf96d076c09a51820a79902a92e576d098833b5861042f7e0254bd67c33d216fd2c7e1953d529e663 WHIRLPOOL 82310d4a8b185f26a770bed9edc9b9d2c7f492e0ccc575bc69c1c28ec9bbbac8db1ccc4e8355c810b9ef5bf0dc41e0a76052c550589869a54e68f2de22388b0d
 MISC metadata.xml 291 SHA256 6a6fbb9d576c975c7f7f488d478ab1db341ea21397f8cd66dc278b13a13a5731 SHA512 6e0af3b85a3693acd83889dabd6ce589c2c8e3e2852820f1135e2ebbe63cf6dd184fcd45f03b7c4ad35414a43543e8c39c7d1b5fa5f72c0e5db2ef907955e462 WHIRLPOOL 465e5e9b5700d6ed972ba129dc114843ec984f377569dfd81f7bb006717e0dc69181f2ffa31308adef1eab32c032d018e6cf519a0714b0ff21ee303dbf250942
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQvWrSAAoJEBzRPIrUMBNCDZIIAJ8L++5X+YRrZ4dVX3kfHiKr
-oizO/nZBCB9M3OniPEggpHF2M2xPaMIvlUQRnRQVOD+gD6N81iqaUb92L9MX62MQ
-bIZTcgKG1taMa4gAry9iUN77zeRcj0ZU3y1iTvKM7IO9bKuuThbbeaRLhaAUbnyO
-S0CTI8Q5hyoO4b78q+NpEVKR2xstpgN8Jf0PYnpdbS9tZ4Ad6vXwGN9nQuopT5E8
-Fx9IdUBtPEqPqAVsuXAitlFC0SGT+rwE1ic/lFCR8FxOXwGwvCnn5atywhsC9pKP
-xzq0DQcvvP2+LtaDjFKBnLrIU/UZkix2S6lQUEo9GdKSqLYKWLxMjPEtT7sw5Zs=
-=GkTY
+iQEcBAEBCAAGBQJQwyTJAAoJEBzRPIrUMBNCFUoH/3nvKRZPha5NcvdvC8e+eTjr
+m23L8TB7Zry1W9G9W+0oHCaICl60pYccGcKhSxa/zMGO13vz7V2kY93dvfbyhl4h
+rzuzO2u4pQnIjf2esM3d37l/Talo1obBSblh8IBfQ9Ql4VA5RnI+YPVgxgGN9yXs
+X1KonXqtFs+puYU5A1VF9ExU/CehGufG/3ta2hQt0ieiDvzbbjxBs6Io32uKVMvf
+E9E0AD9nBRbMWqQg/r3PTnL7RLtA642ghfZIdnY8prk23QEeFIhQnyRmHyzjMamD
+0CAHyHnz9cwWEkuYNQ3PYIBMlRMPnmjrv4cdO2Oj0F63pjRO6sdOHhd+smuXe94=
+=uS7U
 -----END PGP SIGNATURE-----
