@@ -1,6 +1,13 @@
 # ChangeLog for sys-apps/hwids
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hwids/ChangeLog,v 1.50 2012/12/04 03:15:37 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hwids/ChangeLog,v 1.51 2012/12/08 11:30:12 flameeyes Exp $
+
+*hwids-20121208 (08 Dec 2012)
+
+  08 Dec 2012; Diego E. Pettenò <flameeyes@gentoo.org> +hwids-20121208.ebuild,
+  hwids-99999999.ebuild:
+  Version bump; update live ebuild to use the git repository as a starting
+  point, which makes it possible to share most of the ebuild between the two.
 
 *hwids-20121203 (04 Dec 2012)
 
